# v1/controllers/categories-companies/deleteCategory.js
@@ -1,25 +1,39 @@
 const categoryCompanyModel = require("../../models/category-company-model");
+const userModel = require("../../models/user-model");
 const { validateId } = require("../businessLogic/validObjectId");
 
 async function deleteCategory(req, res) {
     const category_uuid = req.params.category_uuid;
+    const user_uuid = req.params.user_uuid;
     const validId = validateId(category_uuid);
     if (validId) {
         const category = await companyModel.findById(category_uuid);
         if(category)
         {
-            const deleteCategoryCompany = await categoryCompanyModel.deleteOne({ _id: category_uuid });
-            if (deleteCategoryCompany) {
-                res.status(201).json({
-                    status: 201,
-                    message: "Category Company delete successfully !",
-                    data: null
-                });
+            const user = await userModel.findById(user_uuid);
+            if(user && user.roles[0] == "ROLE_ADMIN" || user.roles[0] == "ROLE_SUPERADMIN")
+            {
+                const deleteCategoryCompany = await categoryCompanyModel.deleteOne({ _id: category_uuid });
+                if (deleteCategoryCompany) {
+                    res.status(201).json({
+                        status: 201,
+                        message: "Category Company delete successfully !",
+                        data: null
+                    });
+                }
+                else {
+                    res.status(401).json({
+                        status: 401,
+                        message: "Category Company not found !",
+                        data: null
+                    })
+                }
             }
-            else {
+            else
+            {
                 res.status(401).json({
                     status: 401,
-                    message: "Category Company not found !",
+                    message: "This cannot perform this endpoint!",
                     data: null
                 })
             }
